test/tests/bad/conflicting-ctor-def_1.carth
;; ConflictingCtorDef

(data Baz Baz)
(data Quux Baz)
